--- a/line/tobu_urban_park.html
+++ b/line/tobu_urban_park.html
@@ -145,8 +145,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_215a708c77ad4ebf80a08d27f5ed8cf3~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_215a708c77ad4ebf80a08d27f5ed8cf3~mv2.png" alt="流山おおたかの森駅">
-          <p>流山おおたかの森駅 【未収録】</p>
-          <!-- <a href="../station/nagareyamaotakanomori.html"></a> -->
+          <p>流山おおたかの森駅</p>
+          <a href="../station/nagareyamaotakanomori.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_32d3ae1160114bc4b1fd8a84f2ce1b7b~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_32d3ae1160114bc4b1fd8a84f2ce1b7b~mv2.png" alt="豊四季駅">
