--- a/station/isesaki.html
+++ b/station/isesaki.html
@@ -73,18 +73,18 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0670a3ee3b544a29b882c26581d44c1a~mv2.png/v1/fill/w_510,h_510,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0670a3ee3b544a29b882c26581d44c1a~mv2.png" alt="伊勢崎駅">
           <div class="platform">
-            <h2>5番線 -東武伊勢崎線上り</h2>
+            <h2>1番線 -東武伊勢崎線上り</h2>
             <p>亜麻色の髪の少女 【未収録】</p>
           </div>
-          <!-- <a href="../platform/isesaki_5.html"></a> -->
+          <!-- <a href="../platform/isesaki_ti1.html"></a> -->
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0670a3ee3b544a29b882c26581d44c1a~mv2.png/v1/fill/w_510,h_510,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0670a3ee3b544a29b882c26581d44c1a~mv2.png" alt="伊勢崎駅">
           <div class="platform">
-            <h2>6番線 -東武伊勢崎線上り</h2>
+            <h2>2番線 -東武伊勢崎線上り</h2>
             <p>亜麻色の髪の少女 【未収録】</p>
           </div>
-          <!-- <a href="../platform/isesaki_6.html"></a> -->
+          <!-- <a href="../platform/isesaki_ti2.html"></a> -->
         </div>
       </div>
   </div>
