--- a/platform/ota_3_u.html
+++ b/platform/ota_3_u.html
@@ -178,7 +178,7 @@
         
           <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
-      </div>V
+      </div>
       <script type="module">
       const audios = document.getElementById("melody");
       // const tojime = document.getElementById("tojime");
