--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.26 銀座線 虎ノ門駅･#1･#2・同線等 溜池山王駅 #3･#4・丸ノ内線等 新宿三丁目駅･#1･#2・銀座駅 #3･#4・東京駅 #1(丸ノ内線)･#2(丸ノ内線)・大手町駅 #1･#2",
+            text: "【ページ追加】2026.1.30 東武伊勢崎線等 伊勢崎駅 #1(東武)･#2(東武)",
             url: null
           },
           {
