--- a/thanks.html
+++ b/thanks.html
@@ -1790,6 +1790,10 @@
             <td>四季「秋」第3楽章</td>
             <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
           </tr>
+          <tr>
+            <td>亜麻色の髪の乙女</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
