--- a/line/tobu_tojo.html
+++ b/line/tobu_tojo.html
@@ -90,8 +90,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_d5522da41fc14aaf84d309c85da09be8~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d5522da41fc14aaf84d309c85da09be8~mv2.png" alt="和光市駅">
-          <p>和光市駅 【未収録】</p>
-          <!-- <a href="../station/wakoshi.html"></a> -->
+          <p>和光市駅</p>
+          <a href="../station/wakoshi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e46c76346a234a4bb12f307062864c63~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e46c76346a234a4bb12f307062864c63~mv2.png" alt="朝霞駅">
