--- a/line/tobu_koizumi.html
+++ b/line/tobu_koizumi.html
@@ -60,8 +60,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_8745cb595c124db9b2f4415509c63b3a~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8745cb595c124db9b2f4415509c63b3a~mv2.png" alt="西小泉駅">
-          <p>西小泉駅 【未収録】</p>
-          <!-- <a href="../station/nishikoizumi.html"></a> -->
+          <p>西小泉駅</p>
+          <a href="../station/nishikoizumi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_38277a468b9942b389bf9aefb4479eca~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_38277a468b9942b389bf9aefb4479eca~mv2.png" alt="竜舞駅">
