--- a/line/tobu_sano.html
+++ b/line/tobu_sano.html
@@ -60,8 +60,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_f5a4956ee43c47a7a1bd183782c89912~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f5a4956ee43c47a7a1bd183782c89912~mv2.png" alt="葛生駅">
-          <p>葛生駅 【未収録】</p>
-          <!-- <a href="../station/kuzuu.html"></a> -->
+          <p>葛生駅</p>
+          <a href="../station/kuzu.html"></a>
         </div>
       </div>
   </div>
