--- a/line/tobu_urban_park.html
+++ b/line/tobu_urban_park.html
@@ -210,8 +210,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bbb520e801b34e3abdf5f280de1b2e29~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bbb520e801b34e3abdf5f280de1b2e29~mv2.png" alt="船橋駅">
-          <p>船橋駅 【未収録】</p>
-          <!-- <a href="../station/funabashi.html"></a> -->
+          <p>船橋駅</p>
+          <a href="../station/funabashi.html"></a>
         </div>
       </div>
   </div>
