--- a/platform/tatebayashi_3.html
+++ b/platform/tatebayashi_3.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="西小泉駅3番線の信号開通メロディ「Daydream Believer」の再現ができます！">
+  <meta name="description" content="館林駅3番線の信号開通メロディ「Daydream Believer」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="tobu_isesaki.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="西小泉駅3番線の信号開通メロディ「Daydream Believer」の再現ができます！">
-  <meta property="og:title" content="西小泉駅3番線「Daydream Believer」｜どこでもステーションベル">
+  <meta property="og:description" content="館林駅3番線の信号開通メロディ「Daydream Believer」の再現ができます！">
+  <meta property="og:title" content="館林駅3番線「Daydream Believer」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="西小泉駅3番線「Daydream Believer」｜どこでもステーションベル">
-  <title>西小泉駅3番線「Daydream Believer」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="館林駅3番線「Daydream Believer」｜どこでもステーションベル">
+  <title>館林駅3番線「Daydream Believer」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -33,7 +33,7 @@
   </header>
     <div class="background-image">
       <div class="content">
-        <h1>西小泉駅 3番線</h1>
+        <h1>館林駅 3番線</h1>
       </div>
     </div>
     <div class="main">
@@ -172,8 +172,8 @@
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>西小泉駅 3番線「Daydream Believer」</h1>
-          <p>収録駅:西小泉駅3番線</p>
+          <h1>館林駅 3番線「Daydream Believer」</h1>
+          <p>収録駅:館林駅3番線</p>
           <p>スピーカー:PATLITE</p>
         
           <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
