--- a/line/tobu_isesaki.html
+++ b/line/tobu_isesaki.html
@@ -90,8 +90,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7ed3897ccd6042b4b473b1e108fb441a~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7ed3897ccd6042b4b473b1e108fb441a~mv2.png" alt="館林駅">
-          <p>館林駅 【未収録】</p>
-          <!-- <a href="../station/tatebayashi.html"></a> -->
+          <p>館林駅</p>
+          <a href="../station/tatebayashi.html"></a>
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_9844a09198ad4bf383e964e04fb1c690~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9844a09198ad4bf383e964e04fb1c690~mv2.png" alt="西新井駅"> -->
