--- a/line/tobu_koizumi.html
+++ b/line/tobu_koizumi.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7ed3897ccd6042b4b473b1e108fb441a~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7ed3897ccd6042b4b473b1e108fb441a~mv2.png" alt="館林駅">
-          <p>館林駅 【未収録】</p>
-          <!-- <a href="../station/tatebayashi.html"></a> -->
+          <p>館林駅</p>
+          <a href="../station/tatebayashi.html"></a>
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_fd589734ef0648bbbe870158f8b221c7~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_fd589734ef0648bbbe870158f8b221c7~mv2.png" alt="和戸駅"> -->
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_1d47689f4466440aab1fb4f9cf51c73d~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1d47689f4466440aab1fb4f9cf51c73d~mv2.png" alt="東小泉駅">
-          <p>東小泉駅 【未収録】</p>
-          <!-- <a href="../station/higashikoizumi.html"></a> -->
+          <p>東小泉駅</p>
+          <a href="../station/higashikoizumi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_ecf8baf7f56d414d93ac5501c2702da3~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_ecf8baf7f56d414d93ac5501c2702da3~mv2.png" alt="小泉町駅">
