--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.30 東武伊勢崎線等 伊勢崎駅 #1(東武)･#2(東武)",
+            text: "【ページ追加】2026.1.30 東武鉄道・東武スカイツリーライン・東武伊勢崎線・館林駅･#1~#5・太田駅・#1~#4・同線等 伊勢崎駅 #1(東武)･#2(東武)・東武佐野線・葛生駅・東武小泉線・東小泉駅･#1･#2・西小泉駅･#1･#2・東武日光線・東武日光駅･#1~#6・東武鬼怒川線・鬼怒川温泉駅･#1~#4・東武アーバンパークライン・同線等 流山おおたかの森駅･#1･#2･#1(TX)~#4(TX)・船橋駅･#1~#4･#1(東武)･#2・東武東上線・同線等 和光市駅･#1~#4",
             url: null
           },
           {
@@ -206,6 +206,14 @@
       </div>  
       <div class="container">
         <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武伊勢崎線.jpeg" alt="東武鉄道">
+          <div class="line">
+            <img src="https://www.brand-yurai.net/logoimg/2bMhXI0nfCJh0hQp.gif" alt="東武鉄道">
+            <p>東武鉄道</p>
+          </div>
+          <a href="tobu.html"></a>
+        </div>
+        <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/小田急小田原線.jpeg" alt="小田急電鉄">
           <div class="line">
             <img src="https://static.wixstatic.com/media/0acb38_b7e155b6e7c645b3a5280f13790e645b~mv2.png/v1/fill/w_358,h_354,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/0acb38_b7e155b6e7c645b3a5280f13790e645b~mv2.png" alt="小田急電鉄">
@@ -222,14 +230,6 @@
           <a href="yokohama_subway.html"></a>
         </div>      
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
-          <div class="line">
-            <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
-            <p>つくばエクスプレス</p>
-          </div>
-          <a href="tsukuba_express.html"></a>
-        </div> 
-        <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/多摩モノレール.JPG" alt="多摩モノレール">
           <div class="line">
             <img src="https://static.wixstatic.com/media/0acb38_4bc567a8ebd04012b9890811ecfae74f~mv2.png/v1/fill/w_1024,h_1024,al_c/0acb38_4bc567a8ebd04012b9890811ecfae74f~mv2.png" alt="多摩モノレール">
@@ -237,6 +237,40 @@
           </div>
           <a href="tama_monorail.html"></a>
         </div>            
+      </div>
+      <div class="container">   
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
+            <p>つくばエクスプレス</p>
+          </div>
+          <a href="tsukuba_express.html"></a>
+        </div> 
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
+            <p>つくばエクスプレス</p>
+          </div>
+          <a href="tsukuba_express.html"></a>
+        </div> 
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
+            <p>つくばエクスプレス</p>
+          </div>
+          <a href="tsukuba_express.html"></a>
+        </div> 
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/つくばエクスプレス.jpg" alt="つくばエクスプレス">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png/v1/fill/w_1000,h_1000,al_c/0acb38_2c9a52efd49c4163adb5a4d2db7266bb~mv2.png" alt="つくばエクスプレス">
+            <p>つくばエクスプレス</p>
+          </div>
+          <a href="tsukuba_express.html"></a>
+        </div> 
       </div>
     </div>
   <footer class="footer">
