--- a/thanks.html
+++ b/thanks.html
@@ -157,6 +157,38 @@
             <td>伊東線</td>
             <td><a href="https://x.com/i/user/1641937247426736128">快速急行様</a></td>
           </tr>
+          <tr>
+            <td>東武スカイツリーライン</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
+          <tr>
+            <td>東武伊勢崎線</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
+          <tr>
+            <td>東武佐野線</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>東武小泉線</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>東武日光線</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
+          <tr>
+            <td>東武鬼怒川線</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
+          <tr>
+            <td>東武アーバンパークライン</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
+          <tr>
+            <td>東武東上線</td>
+            <td><a href="https://x.com/i/user/1767126892203900929">しらさぎ様</a></td>
+          </tr>
         </tbody>
       </table>
       <h1>サイトBGM提供</h1>
@@ -1792,6 +1824,106 @@
           </tr>
           <tr>
             <td>亜麻色の髪の乙女</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>ロッキーのテーマ</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>春よ、来い</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>負けないで(東武)</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>夜空ノムコウ</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>Stream 東武日光ver</td>
+            <td><a href="https://x.com/i/user/1552109133385838592">⛰️様</a></td>
+          </tr>
+          <tr>
+            <td>色・ホワイトブレンド</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>東武ワールドスクウェア テーマソング 鬼怒川温泉ver</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>     
+          <tr>
+            <td>Spring Rain</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>     
+          <tr>
+            <td>Chathedral</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>     
+          <tr>
+            <td>TOAオリジナルチャイム5 アレンジver</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>    
+          <tr>
+            <td>和光市#1 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>    
+          <tr>
+            <td>TOAオリジナルチャイム8 アレンジver</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>     
+          <tr>
+            <td>和光市#2 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>    
+          <tr>
+            <td>TOAオリジナルチャイム7 アレンジver</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>    
+          <tr>
+            <td>和光市#3 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>   
+          <tr>
+            <td>TOAオリジナルチャイム1 アレンジver</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>    
+          <tr>
+            <td>和光市#4 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>   
+          <tr>
+            <td>線路はつづくよどこまでも(東武)</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>     
+          <tr>
+            <td>ホリデイV2</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>オープニングカリヨン</td>
+            <td><a href="https://x.com/i/user/1552109133385838592">⛰️様</a></td>
+          </tr>
+          <tr>
+            <td>乙女の祈り</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>ホルディリディア</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>Daydream Believer</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>黄色いリボン</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>メリーさんのひつじ</td>
             <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
           </tr>
         </tbody>
