--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       </div>  
       <div class="container">
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武伊勢崎線.jpeg" alt="東武鉄道">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武伊勢崎線.jpg" alt="東武鉄道">
           <div class="line">
             <img src="https://www.brand-yurai.net/logoimg/2bMhXI0nfCJh0hQp.gif" alt="東武鉄道">
             <p>東武鉄道</p>
