--- a/line/yokosuka.html
+++ b/line/yokosuka.html
@@ -160,8 +160,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_64feddbe5b4149c9822ee4e3a08c2451~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_64feddbe5b4149c9822ee4e3a08c2451~mv2.png" alt="船橋駅">
-          <p>船橋駅 【未収録】</p>
-<!--           <a href="../station/funabashi.html"></a> -->
+          <p>船橋駅</p>
+          <a href="../station/funabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_243f761987fa428fad89664cb16ce2db~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_243f761987fa428fad89664cb16ce2db~mv2.png" alt="津田沼駅">
@@ -204,7 +204,7 @@
           <a href="../station/sakura.html"></a>
         </div>
         <div class="column">
-          <img src="https://static.wixstatic.com/media/0acb38_8be193e338914a768c59f31fb8457170~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8be193e338914a768c59f31fb8457170~mv2.png" alt="酒々井駅">
+          <img src="https://static.wixstatic.com/media/0acb38_afa03714a14a49b7b69436b3ed90e6a7~mv2.png/v1/fill/w_287,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_afa03714a14a49b7b69436b3ed90e6a7~mv2.png" alt="酒々井駅">
           <p>酒々井駅 【未収録】</p>
 <!--           <a href="../station/shisui.html"></a> -->
         </div>
