--- a/line/sobu.html
+++ b/line/sobu.html
@@ -190,8 +190,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_fe248d1a472f40a485ca8f1595f94aad~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_fe248d1a472f40a485ca8f1595f94aad~mv2.png" alt="船橋駅">
-          <p>船橋駅 【未収録】</p>
-<!--           <a href="../station/funabashi.html"></a> -->
+          <p>船橋駅</p>
+          <a href="../station/funabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_affd06e6020d49439e027c6aa9553ad0~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_affd06e6020d49439e027c6aa9553ad0~mv2.png" alt="東船橋駅">
