--- a/thanks.html
+++ b/thanks.html
@@ -1926,6 +1926,10 @@
             <td>メリーさんのひつじ</td>
             <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
           </tr>
+          <tr>
+            <td>首都圏10番</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
