--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武東上線_top.jpg" alt="東武鉄道">
           <div class="line">
-            <img src="https://www.brand-yurai.net/logoimg/2bMhXI0nfCJh0hQp.gif" alt="東武鉄道">
+            <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武鉄道.jpg" alt="東武鉄道">
             <p>東武鉄道</p>
           </div>
           <a href="tobu.html"></a>
