--- a/station/tatebayashi.html
+++ b/station/tatebayashi.html
@@ -42,7 +42,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_7ed3897ccd6042b4b473b1e108fb441a~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7ed3897ccd6042b4b473b1e108fb441a~mv2.png" alt="館林駅">
           <div class="platform">
             <h2>1番線 -東武佐野線下り</h2>
-            <p>色・ホワイトブレンド</p>
+            <p>色・ホワイトブレンド 館林ver</p>
           </div>
           <a href="../platform/tatebayashi_1.html"></a>
         </div>
