--- a/platform/tatebayashi_1.html
+++ b/platform/tatebayashi_1.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="館林駅1番線の信号開通メロディ「色・ホワイトブレンド」の再現ができます！">
+  <meta name="description" content="館林駅1番線の信号開通メロディ「色・ホワイトブレンド 館林ver」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="tobu_isesaki.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="館林駅1番線の信号開通メロディ「色・ホワイトブレンド」の再現ができます！">
-  <meta property="og:title" content="館林駅1番線「色・ホワイトブレンド」｜どこでもステーションベル">
+  <meta property="og:description" content="館林駅1番線の信号開通メロディ「色・ホワイトブレンド 館林ver」の再現ができます！">
+  <meta property="og:title" content="館林駅1番線「色・ホワイトブレンド 館林ver」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="館林駅1番線「色・ホワイトブレンド」｜どこでもステーションベル">
-  <title>館林駅1番線「色・ホワイトブレンド」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="館林駅1番線「色・ホワイトブレンド 館林ver」｜どこでもステーションベル">
+  <title>館林駅1番線「色・ホワイトブレンド 館林ver」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -172,7 +172,7 @@
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>館林駅 1番線「色・ホワイトブレンド」</h1>
+          <h1>館林駅 1番線「色・ホワイトブレンド 館林ver」</h1>
           <p>収録駅:館林駅1番線</p>
           <p>スピーカー:PATLITE</p>
         
