--- a/platform/tobu_nikko_1_s.html
+++ b/platform/tobu_nikko_1_s.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="東武日光駅1番線の信号開通メロディ「色・ホワイトブレンド」の再現ができます！">
+  <meta name="description" content="東武日光駅1番線の信号開通メロディ「色・ホワイトブレンド 東武日光ver 東武日光ver」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="tobu_nikko.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="東武日光駅1番線の信号開通メロディ「色・ホワイトブレンド」の再現ができます！">
-  <meta property="og:title" content="東武日光駅1番線「色・ホワイトブレンド」｜どこでもステーションベル">
+  <meta property="og:description" content="東武日光駅1番線の信号開通メロディ「色・ホワイトブレンド 東武日光ver 東武日光ver」の再現ができます！">
+  <meta property="og:title" content="東武日光駅1番線「色・ホワイトブレンド 東武日光ver 東武日光ver」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="東武日光駅1番線「色・ホワイトブレンド」｜どこでもステーションベル">
-  <title>東武日光駅1番線「色・ホワイトブレンド」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="東武日光駅1番線「色・ホワイトブレンド 東武日光ver 東武日光ver」｜どこでもステーションベル">
+  <title>東武日光駅1番線「色・ホワイトブレンド 東武日光ver 東武日光ver」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -165,21 +165,21 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/色・ホワイトブレンド.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/色・ホワイトブレンド 東武日光ver 東武日光ver.mp3"></audio>
     <!-- <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E9%AB%98%E8%90%A91%E7%95%AA%E4%B8%8A%E3%82%8A.mp3"></audio> -->
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>東武日光駅 1番線「色・ホワイトブレンド」</h1>
+          <h1>東武日光駅 1番線「色・ホワイトブレンド 東武日光ver 東武日光ver」</h1>
           <p>収録駅:館林駅1番線</p>
           <p>スピーカー:PATLITE</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="tobu_nikko_1_s.html">色・ホワイトブレンド</option>
+          <option value="tobu_nikko_1_s.html">色・ホワイトブレンド 東武日光ver 東武日光ver</option>
           <option value="tobu_nikko_1.html">Stream 東武日光ver</option>
         </select>
       </div>
