--- a/platform/tobu_nikko_2_s.html
+++ b/platform/tobu_nikko_2_s.html
@@ -165,7 +165,7 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/色・ホワイトブレンド 東武日光ver.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/色・ホワイトブレンド%20東武日光ver.mp3"></audio>
     <!-- <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E9%AB%98%E8%90%A91%E7%95%AA%E4%B8%8A%E3%82%8A.mp3"></audio> -->
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
