--- a/platform/tobu_nikko_2_s.html
+++ b/platform/tobu_nikko_2_s.html
@@ -173,7 +173,7 @@
       <div class="arrange">
         <div class="content">
           <h1>東武日光駅 2番線「色・ホワイトブレンド 東武日光ver」</h1>
-          <p>収録駅:館林駅1番線</p>
+          <p>収録駅:東武日光駅1番線</p>
           <p>スピーカー:PATLITE</p>
         
         </div>
