--- a/thanks.html
+++ b/thanks.html
@@ -1930,6 +1930,14 @@
             <td>首都圏10番</td>
             <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
           </tr>
+          <tr>
+            <td>YELL サビver</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
+          <tr>
+            <td>YELL イントロver</td>
+            <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
