--- a/line/odakyu_odawara.html
+++ b/line/odakyu_odawara.html
@@ -205,8 +205,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_aa17276422584d7ca584248a5a30beaa~mv2.png/v1/fill/w_510,h_510,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_aa17276422584d7ca584248a5a30beaa~mv2.png" alt="本厚木駅">
-          <p>本厚木駅 【未収録】</p>
-          <!-- <a href="../station/honatsugi.html"></a> -->
+          <p>本厚木駅</p>
+          <a href="../station/honatsugi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0a4d453428b64cfd84c3de9e0305d6f2~mv2.png/v1/fill/w_510,h_510,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0a4d453428b64cfd84c3de9e0305d6f2~mv2.png" alt="愛甲石田駅">
