--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.30 東武鉄道・東武スカイツリーライン・東武伊勢崎線・館林駅･#1~#5・太田駅・#1~#4・同線等 伊勢崎駅 #1(東武)･#2(東武)・東武佐野線・葛生駅・東武小泉線・東小泉駅･#1･#2・西小泉駅･#1･#2・東武日光線・東武日光駅･#1~#6・東武鬼怒川線・鬼怒川温泉駅･#1~#4・東武アーバンパークライン・同線等 流山おおたかの森駅･#1･#2･#1(TX)~#4(TX)・船橋駅･#1~#4･#1(東武)･#2・東武東上線・同線等 和光市駅･#1~#4",
+            text: "【ページ追加】2026.2.1 小田急小田原線 本厚木駅･#2･#4",
             url: null
           },
           {
-            text: "【機能追加】2026.1.19 トップページBGM変更：2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」",
+            text: "【機能追加】2026.2.1 トップページBGM継続使用：2026年2月限定曲「首都圏22番 アレンジver_V2」",
             url: null
           },
           {
