--- a/thanks.html
+++ b/thanks.html
@@ -207,6 +207,10 @@
             <td>2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」</td>
             <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
           </tr>
+          <tr>
+            <td>2026年2月限定曲「首都圏22番 アレンジver_V2」</td>
+            <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
+          </tr>
         </tbody>
       </table>
       <h1>音声提供</h1>      
