--- a/station/tobu_nikko.html
+++ b/station/tobu_nikko.html
@@ -58,7 +58,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png" alt="東武日光駅">
           <div class="platform">
             <h2>4番線 -東武日光線上り</h2>
-            <p>〈予告〉E3 Way back home 【未収録】/〈発車〉Stream 東武日光ver</p>
+            <p>〈予告〉E3 Way back home /〈発車〉Stream 東武日光ver</p>
           </div>
           <a href="../platform/tobu_nikko_4.html"></a>
         </div>
@@ -74,7 +74,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png" alt="東武日光駅">
           <div class="platform">
             <h2>6番線 -東武日光線上り</h2>
-            <p>〈予告〉E3 Way back home 【未収録】/〈発車〉Stream 東武日光ver</p>
+            <p>〈予告〉E3 Way back home /〈発車〉Stream 東武日光ver</p>
           </div>
           <a href="../platform/tobu_nikko_6.html"></a>
         </div>
