--- a/platform/tobu_nikko_6.html
+++ b/platform/tobu_nikko_6.html
@@ -176,8 +176,8 @@
           <p>収録駅:東武日光駅6番線</p>
           <p>スピーカー:National川崎型</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <button id="departure" style="margin-left: 20px;">予告放送</button>
         
       </div>
