--- a/platform/tobu_nikko_6.html
+++ b/platform/tobu_nikko_6.html
@@ -165,7 +165,8 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/Stream%20東武日光ver.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/Stream%20東武日光ver.mp3"></audio>    
+    <audio id="depart" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/E3%20Way%20back%20home_東武日光6番.mp3"></audio>
     <!-- <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E7%94%B7%E5%A3%B0%E5%8D%98%E4%BD%93%E8%8B%B1%E8%AA%9E%E6%AC%A1%E9%9B%BB.mp3"></audio> -->
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
