--- a/thanks.html
+++ b/thanks.html
@@ -1942,6 +1942,10 @@
             <td>YELL イントロver</td>
             <td><a href="https://x.com/i/user/1701514558891057152">さくさく様</a></td>
           </tr>
+          <tr>
+            <td>鉄道唱歌 verC</td>
+            <td><a href="https://x.com/i/user/1067983278961942528">とらむじっく様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
