--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.1 小田急小田原線 本厚木駅･#2･#4",
+            text: "【ページ追加】2026.2.1 小田急小田原線 本厚木駅･#2･#4・東海道本線等 品川駅 #7(旧)",
             url: null
           },
           {
