--- a/station/kashimajingu.html
+++ b/station/kashimajingu.html
@@ -54,6 +54,14 @@
           </div>
           <a href="../platform/kashimajingu_2.html"></a>
         </div>
+        <hr />
+        <div class="column">
+<!--           <img src="https://static.wixstatic.com/media/0acb38_f91725f8db6e4b828a09b96d379e1f7a~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f91725f8db6e4b828a09b96d379e1f7a~mv2.png" alt="登戸駅"> -->
+          <div class="platform">
+            <h2>被り再現</h2>
+          </div>
+          <a href="../platform/kashimajingu.html"></a>
+        </div>
       </div>
   </div>
   <footer class="footer">
