--- a/thanks.html
+++ b/thanks.html
@@ -54,6 +54,10 @@
             <td>リンク・サイト名の記載にかかわらず事前申請</td>
           </tr>
           <tr>
+            <td>当サイトのコンテンツを用いて収益を得る行為</td>
+            <td>申請の有無にかかわらず、許可しない</td>
+          </tr>
+          <tr>
             <td>サイト名をチャンネル名に含めるなどのなりすまし行為</td>
             <td>非公式を明記しない場合、許可しない</td>
           </tr>
