--- a/platform/ikebukuro_tj1.html
+++ b/platform/ikebukuro_tj1.html
@@ -219,7 +219,7 @@
       let buttonon = document.getElementById("buttonon");
       const last = document.getElementById("last");
       const departure = document.getElementById("departure");
-      const normals = document.gegtElementsByClassName("normal");
+      const normals = document.getElementsByClassName("normal");
       const finals = document.getElementsByClassName("final");
       let url = new URL(window.location.href);
       let params = url.searchParams;
