--- a/platform/ikebukuro_tj1.html
+++ b/platform/ikebukuro_tj1.html
@@ -235,6 +235,7 @@
             finals.forEach(btn => {
               btn.style.display = "block";
             });
+            isLast = true;
           } else {
             normals.forEach(btn => {
               btn.style.display = "block";
@@ -242,6 +243,7 @@
             finals.forEach(btn => {
               btn.style.display = "none";
             });
+            isLast = false;
           }
         });
                               
