--- a/platform/ikebukuro_tj1_o2.html
+++ b/platform/ikebukuro_tj1_o2.html
@@ -182,7 +182,7 @@
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
           <option value="ikebukuro_tj1_o2.html">Passenger 池袋ver</option>
-          <option value="ikebukuro_tj1.html">Passenger 池袋ver</option>
+          <option value="ikebukuro_tj1.html">ディベルティメントK.136より第一楽章アレグロ</option>
           <option value="ikebukuro_tj1_o1.html">立教大学校歌</option>
         </select>
         <button id="departure" style="margin-left: 20px;">発車放送</button>
