--- a/platform/ikebukuro_tj2_o1.html
+++ b/platform/ikebukuro_tj2_o1.html
@@ -197,7 +197,7 @@
           
           <h1>池袋駅 2番線(旧)「立教大学校歌」</h1>
           <p class="normal">収録駅:池袋駅2番線</p>
-          <p class="final">収録駅:池袋駅2番線(発車放送…<a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.</a>氏による収録</p>
+          <p class="final" style="display: none;">収録駅:池袋駅2番線(発車放送…<a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.</a>氏による収録</p>
           <p>スピーカー:TOAコラム</p>
           
         </div>
