--- a/platform/ikebukuro_tj1_o2.html
+++ b/platform/ikebukuro_tj1_o2.html
@@ -175,7 +175,7 @@
         <div class="content">
           
           <h1>池袋駅 1番線(旧)「Passenger 池袋ver」</h1>
-          <p>収録駅:池袋駅1番線</p>
+          <p>収録駅:池袋駅2番線(<a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.</a>氏による収録)</p>
           <p>スピーカー:TOAコラム</p>
           
         </div>
