--- a/platform/ikebukuro_tj2.html
+++ b/platform/ikebukuro_tj2.html
@@ -196,7 +196,8 @@
         <div class="content">
           
           <h1>池袋駅 2番線「ディベルティメントK.136より第一楽章アレグロ」</h1>
-          <p>収録駅:池袋駅1番線</p>
+          <p class="normal">収録駅:池袋駅1番線</p>
+          <p class="final" style="display: none;">収録駅:池袋駅1番線(発車放送…<a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.</a>氏による収録)</p>
           <p>スピーカー:TOAコラム</p>
           
         </div>
