--- a/platform/ikebukuro_tj1_o2.html
+++ b/platform/ikebukuro_tj1_o2.html
@@ -166,7 +166,7 @@
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
     <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/Passenger%20池袋ver.mp3"></audio>
-    <audio id="depart" src="https://raw.githubusercontente.com/ssmn93/dokobell_melody/main/発車放送_池袋1番.mp3"></audio>
+    <audio id="depart" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/発車放送_池袋1番.mp3"></audio>
 <!--     <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E7%94%B7%E5%A3%B03%E7%95%AA.mp3"></audio> -->
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
