--- a/thanks.html
+++ b/thanks.html
@@ -1950,6 +1950,62 @@
             <td>鉄道唱歌 verC</td>
             <td><a href="https://x.com/i/user/1067983278961942528">とらむじっく様</a></td>
           </tr>
+          <tr>
+            <td>ディベルティメントK.136より第一楽章アレグロ</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>立教大学校歌(1番線1c固定)</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>立教大学校歌(1･2番線非固定)</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>
+          <tr>
+            <td>Passenger 池袋ver</td>
+            <td><a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.様</a></td>
+          </tr>
+          <tr>
+            <td>池袋#1(東武) 発車放送</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>
+          <tr>
+            <td>池袋#2(東武) 発車放送</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>アイネ・クライネ・ナハトムジークより第三楽章メヌエット</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>立教池袋中学校校歌</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>Memoria</td>
+            <td><a href="https://www.youtube.com/@MusashinoChannel">Musashino Ch.様</a></td>
+          </tr>
+          <tr>
+            <td>池袋#3(東武) 発車放送</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>交響曲第6番「田園」より第一楽章アレグロ・マ・ノン・トロッポ</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>立教小学校準校歌「立教生が歩く道」</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>
+          <tr>
+            <td>時ジロウ20</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
+          <tr>
+            <td>池袋#5(東武) 発車放送</td>
+            <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
