--- a/station/ikebukuro.html
+++ b/station/ikebukuro.html
@@ -153,41 +153,41 @@
           <img src="https://static.wixstatic.com/media/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>1番線 -東武東上線下り</h2>
-            <p>ディベルティメントK.136より第一楽章アレグロ 【未収録】</p>
+            <p>ディベルティメントK.136より第一楽章アレグロ</p>
           </div>
-<!--           <a href="../platform/ikebukuro_tj1.html"></a> -->
+          <a href="../platform/ikebukuro_tj1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>2番線 -東武東上線下り</h2>
-            <p>ディベルティメントK.136より第一楽章アレグロ 【未収録】</p>
+            <p>ディベルティメントK.136より第一楽章アレグロ</p>
           </div>
-<!--           <a href="../platform/ikebukuro_tj2.html"></a> -->
+          <a href="../platform/ikebukuro_tj2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>3番線 -東武東上線下り</h2>
-            <p>アイネ・クライネ・ナハトムジークより第三楽章メヌエット 【未収録】</p>
+            <p>アイネ・クライネ・ナハトムジークより第三楽章メヌエット</p>
           </div>
-<!--           <a href="../platform/ikebukuro_tj3.html"></a> -->
+          <a href="../platform/ikebukuro_tj3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>4番線 -東武東上線下り</h2>
-            <p>アイネ・クライネ・ナハトムジークより第三楽章メヌエット 【未収録】</p>
+            <p>アイネ・クライネ・ナハトムジークより第三楽章メヌエット</p>
           </div>
-<!--           <a href="../platform/ikebukuro_tj4.html"></a> -->
+          <a href="../platform/ikebukuro_tj4.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5fc370716e18465e965afb3b856d9b4e~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>5番線 -東武東上線下り</h2>
-            <p>交響曲第6番「田園」より第一楽章アレグロ・マ・ノン・トロッポ 【未収録】</p>
+            <p>交響曲第6番「田園」より第一楽章アレグロ・マ・ノン・トロッポ</p>
           </div>
-          <!-- <a href="../platform/ikebukuro_tj5.html"></a> -->
+          <a href="../platform/ikebukuro_tj5.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
